mp3gain (1.5.2-r2-1) UNRELEASED; urgency=low

  * New upstream version.
  * Switch to quilt 3.0 format.
  * New maintainer. (Closes: #619847)
  * Switch d/compat to 8.
  * Update debhelper (>= 8).
  * Removed dpatch from dependecies.
  * Bump to Standards-Version: 3.9.2.
  * Added Vcs-*

 -- Fabrizio Regalli <fabreg@fabreg.it>  Wed, 06 Jul 2011 15:45:03 +0200

mp3gain (1.5.1-4) unstable; urgency=low

  * Fix various potential segfaults found by cppcheck.
  * Backport a format string error fix from 1.5.2.
  * Bump standards version (no changes).

 -- Stefan Fritsch <sf@debian.org>  Sat, 28 Aug 2010 20:20:19 +0200

mp3gain (1.5.1-3) unstable; urgency=low

  * Remove trailing spaces when converting ID3v1 tags to ID3v2.4. Thanks to
    Alexander Zangerl for the patch. Closes: #564308
  * Bump standards version (no changes).

 -- Stefan Fritsch <sf@debian.org>  Sun, 10 Jan 2010 08:28:37 +0100

mp3gain (1.5.1-2) unstable; urgency=low

  * Add new options in 1.5.x and some clarifications to the man page. Thanks
    to Joris van Rantwijk for the patch. Closes: #540622
  * Also mention the possiblity to use ID3v2 tags in the package description.

 -- Stefan Fritsch <sf@debian.org>  Sun, 09 Aug 2009 11:51:47 +0200

mp3gain (1.5.1-1) unstable; urgency=low

  * New upstream version.
  * Bump standards version (no changes).

 -- Stefan Fritsch <sf@debian.org>  Fri, 24 Jul 2009 13:17:40 +0200

mp3gain (1.4.6-8) unstable; urgency=medium

  * Rebuild with non-buggy gcc. This fixes mp3gain giving wrong results on
    i386 (closes: #519949).
  * Fix lintian warnings: 
    - Bump standards version:
      + Add homepage to debian/control.
      + Add README.source.
    - Use UTF8 for debian/copyright. 
    - Switch to debhelper compatibility level 7.

 -- Stefan Fritsch <sf@debian.org>  Mon, 23 Mar 2009 11:51:58 +0100

mp3gain (1.4.6-7) unstable; urgency=low

  * Fix another segfault with not-writable files (Closes: #444373)
