@@ -4,8 +4,6 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-include /usr/share/dpatch/dpatch.make
-
 
 CFLAGS = -Wall -g
 export CFLAGS
@@ -20,7 +18,7 @@ endif
 
 build: build-stamp
 
-build-stamp: patch
+build-stamp:
 	dh_testdir
 
 	$(MAKE)
@@ -28,9 +26,7 @@ build-stamp: patch
 
 	touch build-stamp
 
-clean: clean-patched unpatch
-
-clean-patched:
+clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
