@@ -8,6 +8,7 @@ mp3gain (1.5.2-r2-1) UNRELEASED; urgency=low
   * Removed dpatch from dependecies.
   * Bump to Standards-Version: 3.9.2.
   * Added Vcs-*
+  * Removed dpatch.make from d/rules.
 
  -- Fabrizio Regalli <fabreg@fabreg.it>  Wed, 06 Jul 2011 15:45:03 +0200
 
